--- a/src/screens/styles/Middleware.css
+++ b/src/screens/styles/Middleware.css
@@ -27,3 +27,8 @@
     animation-name: example2;
     animation-duration: 2s;
 }
+@media only screen and (max-width: 600px) {
+  .carousel-img{
+    height: 50vh !important;
+  }
+}
