--- a/src/screens/styles/Navbar.css
+++ b/src/screens/styles/Navbar.css
@@ -14,3 +14,8 @@ ul li a:hover {
     transition: 0.2s;
     font-size: 1.25rem !important;
 }
+@media only screen and (max-width: 600px) {
+    .top-h5{
+        display: none;
+    }
+  }
